test/files/neg/divergent-implicit.check
divergent-implicit.scala:4: error: type mismatch;
 found   : Int(1)
 required: String
  val x1: String = 1
                   ^
divergent-implicit.scala:5: error: diverging implicit expansion for type Int => String
starting with method $conforms in object Predef
  val x2: String = cast[Int, String](1)
                                    ^
divergent-implicit.scala:14: error: type mismatch;
 found   : Test2.Foo
 required: Test2.Bar
  val x: Bar = new Foo
               ^
divergent-implicit.scala:15: error: type mismatch;
 found   : Test2.Baz
 required: Test2.Bar
  val y: Bar = new Baz
               ^
four errors found
